Fixed scrollbar bug

--- a/webcomponents/src/app/layout/Layout.module.css
+++ b/webcomponents/src/app/layout/Layout.module.css
@@ -83,7 +83,6 @@
 }
 
 .formcontainer{
-    border: dotted;
     width: 100%;
     margin-top: 5%;
     margin-left: auto;
